Add link to submit review of toilet from info window on homepage

--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -50,8 +50,8 @@
       for(var i=0; i < toilets.length; i++){
         var contentString =
         '<h3>'+toilets[i].name+'</h3>'+
-        '<div id="bodyContent"><p>Location: '+ toilets[i].location + '</p>'+
-        '<p><a href="/toilets/'+ toilets[i].id +'" class="button"><i class="fi-magnifying-glass"></i> Details </a> <a class="button"><i class="fi-pencil"></i> Review </a> <a class="button"><i class="fi-map"></i> Directions </a></p></div>';
+        '<div><p>Location: '+ toilets[i].location + '</p>'+
+        '<p><a href="/toilets/'+ toilets[i].id +'" class="button"><i class="fi-magnifying-glass"></i> Details </a> <a href="/toilets/'+ toilets[i].id +'/review" class="button"><i class="fi-pencil"></i> Review </a>';
 
         var infowindow = new google.maps.InfoWindow({content: contentString});
 
