Change language of new review page

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,6 @@
-<div><h1> Review this toilet mothafucka </h1></div>
+<div>
+	<h1> Submit Review </h1>
+</div>
 
 <div>
 	<form action='/reviews' method='post'>
