--- a/app/views/layouts/_loggedin_nav.html.erb
+++ b/app/views/layouts/_loggedin_nav.html.erb
@@ -13,5 +13,5 @@
     <%= link_to "SETTINGS", edit_user_path(current_user) %>
   </li>
   <li class='button'>
-    <%= link_to "LOGOUT", logout_path, method: :delete %>
+    <%= link_to "LOGOUT", destroy_user_session_path, method: :delete %>
   </li>
