--- a/app/views/layouts/_loggedout_nav.html.erb
+++ b/app/views/layouts/_loggedout_nav.html.erb
@@ -2,8 +2,8 @@
     <%= link_to 'HOME', root_path %>
   </li>
   <li class='button'>
-    <%= link_to 'REGISTER', new_user_path %>
+    <%= link_to 'REGISTER', new_user_registration_path %>
   </li>
   <li class='button'>
-    <%= link_to 'LOGIN', login_path %>
+    <%= link_to 'LOGIN', user_session_path %>
   </li>
