--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       </div>
       <div class="top-bar-right">
         <ul class="menu" id='nav-bar' data-responsive-menu="drilldown medium-dropdown">
-          <% if logged_in? %>
+          <% if current_user %>
             <%= render "layouts/loggedin_nav" %>
           <% else %>
             <%= render "layouts/loggedout_nav"%>
@@ -47,7 +47,7 @@
           <ul class="footer-links">
             <li><a href="#">Alyssa</a></li>
             <li><a href="#">John</a></li>
-            <li><a href="#">FJ</a></li>
+            <li><a href="http://fjcollinsjr.com">FJ</a></li>
           <ul>
         </div>
         <div class="small-12 medium-3 large-4 columns">
