--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,9 +7,14 @@
 <ul class="users">
   <% @users.each do |user| %>
     <li>
-      <%= gravatar_for user %>
-      <%= link_to user.username, user %>
-      <% if logged_in? && current_user.admin? %>
+      <% if user.google_oauth2 %>
+        <%= image_tag(user.google_oauth2.image) %>
+        <%= link_to user.google_oauth2.name, user%>
+      <% else %>
+        <%= image_tag(user.facebook.image) %>
+        <%= link_to user.facebook.name, user%>
+      <% end %>
+      <% if current_user %>
       <%= link_to "delete", user, method: :delete,
                                   data: { confirm: "You sure?" } %>
       <% end %>
